SERVER-66015 Distinguish simple and non-simple regexes in SBE plan cache key